# peri_rept_down

./: .env.tushare.example  .gitignore  CLAUDE.md  PROJECT_STATUS.json  PROJECT_STATUS.md  README.md  config.py  conftest.py  expansion_test_v2.py  install_tesseract.sh  install_wsl_ubuntu.bat  logger.py  main.py  monitoring.py  performance.py  pyproject.toml  requirements.txt  stock_universe.py  test_002475_conf.py  test_002475_conf2.py  test_002475_items.py  test_002475_raw.py  test_data_quality.py  test_fix.py  test_multi_stock.py  test_noncid.py  test_quick.py
.claude/: settings.local.json
astock_fundamentals/: __init__.py
crawlers/: pdf_verifier.py  report_list.py  stock_list.py
data/: decode_mappings.json  decode_mappings_by_type.json  download_checkpoint.json  download_manifest.json  em_column_mappings.json  ground_truth_comparison_summary.json  guosen_600519_2022.json  guosen_600519_2025.json  pdf_download_checkpoint.json
docs/: SINA_RULE_OPTIMIZATION_PLAN.md  demo_results.html  temp_600519_2025.html  temp_600519_compare.html
extraction/: __init__.py  cas_mapper.py  cas_vocabulary.py  cid_detector.py  cli.py  config.py  engine_validator.py  label_recovery.py  quality_gate.py  quality_report.py  semantic_recovery.py  table_formatter.py  word_recovery.py
rules/: aliases.yaml  aliases_flat.yaml.bak  cf_direct_items.yaml  cf_field_map_financial.yaml  field_order.yaml  financial_stock_codes.yaml  indirect_cf_formulas.yaml  industry_aliases.yaml  section_keywords.yaml  skip_items.yaml  tushare_rds_field_mapping.yaml  unit_detection.yaml  validation_rules.yaml  (+1 more)
(+28963 files in other folders)
