[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "astock-fundamentals"
version = "0.2.0"
description = "A股上市公司基础财务数据获取框架 - 支持RDS/PDF/API多数据源"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "pandas>=1.5",
    "lxml>=4.9",
    "pdfplumber>=0.9",
    "pyreadr>=0.4",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/cheetahfly/astock_fundamentals"

[tool.setuptools.packages.find]
where = ["."]
include = ["astock_fundamentals*"]
